# python-learnings

./: .gitignore  Dockerfile  activate  env.python  main.py  mypy.ini  pyproject.toml
.github/workflows/: pipeline.yml
api_client/: client.py
requirements/: test.txt
src/: dto.py
src/api_client/: client.py
tests/unit/api_client/: client.py  client_test.py
